testdata/baselines/reference/submodule/conformance/jsdocImplementsTag.errors.txt
/a.js(6,17): error TS8005: 'implements' clauses can only be used in TypeScript files.


==== /a.js (1 errors) ====
    /**
     * @typedef { { foo: string } } A
     */
    
    /**
     * @implements { A }
                    ~~
!!! error TS8005: 'implements' clauses can only be used in TypeScript files.
     */
    class B {
        foo = ''
    }
    